--- a/mini-book.html
+++ b/mini-book.html
@@ -14,7 +14,7 @@
                 <p>We spend lots of time looking through photos of Eoin and wanted to share a few of them with you.</p>
                 <p>It's always nice to hear new stories about Eoin or old ones retold. Please keep sharing any that you've got.</p>
                 <dl class="fadeIn" style="display:none">
-                    <dt>&rarr; j</dt><dd>next page</dd><dt>&larr; k</dt><dd>previous page</dd>
+                    <dt>next page:</dt><dd>&rarr; j</dd><dt>previous page:</dt><dd>&larr; k</dd>
                 </dl>
             </div>
             <a href="1..2" class="right"><img src="/images/mini-book/0.jpg"  alt="Eoin, enjoying a family brunch in Dublin, soon before heading to New York. February 2010." width="426" height="426"/></a>
