--- a/memorial.html
+++ b/memorial.html
@@ -2,6 +2,19 @@
 <head>
     <link rel="stylesheet" type="text/css" media="all" href="/stylesheets/style.css"/>
     <title>Make Eoin proud</title>
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-623877-13']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+    </script>
 </head>
 <body>
 <h1><a href="/">Make Eoin proud</a></h1>
