link to/from home page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <p>Every day, Eoin did something that made us proud. Now it's our turn to do the same for him.</p>
 
 <p>Watch the <a href="/memorial">memorial service</a> we held to help celebrate his incredible life.</p>
+<p>Flick through a <a href="/mini-book">little photo book of special moments</a></p>
 
 </body>
 </html>
